<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin">
    <!--xmlns:tools="http://schemas.android.com/tools"-->
    <!--tools:showIn="@layout/activity_main"-->
    <!--tools:context="fragment.MainFragment_"-->
    <RelativeLayout
        android:id="@+id/text_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="35dp"
            android:inputType="textLongMessage"/>

        <Button
            android:id="@+id/textClear"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:visibility="gone"
            android:background="@drawable/ic_navigation_close"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_container"/>

    <TableLayout
        android:id="@+id/checksContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/result">

        <TableRow
            android:weightSum="2">

            <CheckBox
                android:id="@+id/checkUppercase"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/check_uppercase_text"/>

            <CheckBox
                android:id="@+id/checkLowercase"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/check_lowercase_text"/>


        </TableRow>

        <TableRow
            android:weightSum="2">

            <CheckBox
                android:id="@+id/checkInteger"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/check_integer"/>

            <CheckBox
                android:id="@+id/checkEspecial"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/check_especial_caracters"/>


        </TableRow>

        <TableRow
            android:weightSum="2">

            <CheckBox
                android:id="@+id/checkBlank"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/check_blanks"/>

        </TableRow>

        <TableRow
            android:weightSum="2">

            <EditText
                android:id="@+id/length"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:maxLength="4"
                android:inputType="numberSigned"/>

        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/generateButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/checksContainer"/>

    <TextView
        android:id="@+id/generateResult"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/generateButton"
        android:scrollbars="vertical"
        android:textIsSelectable="true"/>

</RelativeLayout>
